初始提交：前端基础代码

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 // 配置信息 ============================================
 const config = {
     clientID: "9515a447fe744949b7250863c9d85634",         // ← 修改1：替换你的Client ID
-    callbackURL: "https://1003230361.github.io/eve-seat-personal/", // ← 修改2：部署时改为GitHub Pages地址
+    callbackURL: "https://1003230361.github.io/eve-frontend/", // ← 修改2：部署时改为GitHub Pages地址
     esiBase: "https://esi.evetech.net/latest"
 };
 
